--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ before_build:
 - appveyor-retry npm install
 - gulp publish
 build:
+- dotnet build
   parallel: true
 after_build:
 - dotnet publish -c Release -r ubuntu.16.04-x64
